--- a/style.css
+++ b/style.css
@@ -10,42 +10,49 @@ header {
     background-color: rgb(83, 96, 119);
     padding: 10px 20px;
     box-shadow: 0px 0px 5px black;
-    transition: 0.5s;
+    transition: all 0.5s ease;
 }
 
 .banner {
     color: white;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
-    filter: drop-shadow(0px 0px 5px black); 
+    filter: drop-shadow(0px 0px 5px black);
+}
+
+nav {
+    display: flex;
+    gap: 15px;
 }
 
 nav a {
     text-decoration: none;
     color: white;
     background-color: rgb(64, 78, 99);
-    padding: 8px 15px;
-    margin: 0 5px;
+    padding: 8px 20px;
     border-radius: 5px;
     border: 2px solid white;
     box-shadow: 0px 0px 5px black;
-    transition: all 0.5s ease; 
+    transition: all 0.5s ease;
 }
 
 nav a:hover {
     background-color: grey;
     color: black;
-    transform: scale(1.05); 
-    filter: drop-shadow(0px 0px 5px black); 
+    transform: scale(1.05);
+    filter: drop-shadow(0px 0px 5px black);
+    animation: bounce 0.5s;
 }
 
-/* ICON STYLE IN NAVIGATION */
-nav img {
-    vertical-align: middle;
-    margin-right: 5px;
+.logo-container img {
+    height: 50px;
+    width: auto;
 }
 
-/* KEYFRAMES FOR ANIMATION */
+nav a i {
+    margin-right: 8px;
+}
+
 @keyframes bounce {
     0%, 100% {
         transform: translateY(0);
@@ -53,8 +60,4 @@ nav img {
     50% {
         transform: translateY(-5px);
     }
-}
-
-nav a:hover {
-    animation: bounce 0.5s; 
 }
