--- a/style.css
+++ b/style.css
@@ -14,15 +14,13 @@ header {
 }
 
 .banner {
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    filter: drop-shadow(0px 0px 5px black);
+    display: none;
 }
 
 nav {
     display: flex;
     gap: 15px;
+    margin-left: 0;
 }
 
 nav a {
